[package]
name = "react-state-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = {version = "0.8.11", features = ["serde"]}
getrandom = { version = "0.2.15", features = ["js"] }
serde = "1.0.210"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O4"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]